<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OO</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_vip">VIPActivity</string>
    <string name="title_activity_qqmoney">QQMoneyActivity</string>
    <string name="title_activity_dress_up">DressUpActivity</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="title_activity_my_photo">MyPhotoActivity</string>
    <string name="title_activity_my_file">MyFileActivity</string>
    <string name="refresh_down_text">下拉刷新</string>
    <string name="refresh_release_text">释放立即刷新</string>
    <string name="toast_text">ScrollView下拉刷新完毕</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="id">请输入手机号</string>
    <string name="login">登录</string>
    <string name="password">请输入6~20位的密码</string>
    <string name="misspassword">无法登录？</string>
    <string name="newuser">新用户</string>
    <string name="back">返回</string>
    <string name="register">注册</string>
    <string name="auth_code">验证码</string>
    <string name="check">换一张</string>
    <string name="isture">确认</string>
    <string name="findpassword">找回密码</string>
    <string name="truepassword">确认您的密码</string>
    <string name="id_true">格式错误</string>
    <string name="pstrue">密码不一致</string>
    <string name="autetrue">验证码错误</string>
    <string name="changepw">修改密码</string>
    <string name="true_change">确认修改</string>
    <string name="newpassword">请输入6~20位的新密码</string>
    <string name="oldpasswors">请输入旧密码</string>
    <string name="idh">用户不存在</string>
    <string name="wrongpw">密码输入错误</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_find_pwd">FindPwdActivity</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>

</resources>
